--- a/bootstrap-challenge-the_mountain-master/index.html
+++ b/bootstrap-challenge-the_mountain-master/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  
-    <div class="container w-75">
+    <div class="container w-75" id="galeriephoto">
         <div class="row py-5 justify-content-center">
             <div class="col-8">
                 <img class="w-100 pb-2 pe-2" src="./images/300.jpeg" alt="">
